feat(config): added new property maxCountUserCommands

--- a/app/src/main/resources/config/DefaultConfig.cfg
+++ b/app/src/main/resources/config/DefaultConfig.cfg
@@ -67,6 +67,9 @@ messageOutputHeight=200
 # Min=1 Max=10000
 maxCountMessages=100
 
+# Min=1 Max=1000
+maxCountUserCommands=200
+
 # Min=400 (dp)
 commandFieldWidth=666
 
