feat(config): added max value for edgeWidth property

--- a/app/src/main/resources/config/DefaultConfig.cfg
+++ b/app/src/main/resources/config/DefaultConfig.cfg
@@ -96,7 +96,7 @@ edgeLabelSize=14
 # Min=1 Max=100 (float)
 edgeArrowSize=10.0
 
-# Min=1 (float)
+# Min=1 Max=15 (float)
 edgeWidth=1.0
 
 # Min=0.1 Max=10 (float)
