feat(config): added max value for commandFieldWidth property

--- a/app/src/main/resources/config/DefaultConfig.cfg
+++ b/app/src/main/resources/config/DefaultConfig.cfg
@@ -70,7 +70,7 @@ maxCountMessages=100
 # Min=1 Max=1000
 maxCountUserCommands=200
 
-# Min=400 (dp)
+# Min=400 Max=900(dp)
 commandFieldWidth=666
 
 # true or false
