feat(localization): added support for custom language

--- a/app/src/main/resources/config/DefaultConfig.cfg
+++ b/app/src/main/resources/config/DefaultConfig.cfg
@@ -3,7 +3,7 @@
 
 ! General settings
 
-# Supported languages: en, ru
+# Supported languages: en, ru, custom
 language=en
 
 # Supported values: light, dark, custom
