--- a/app/src/main/resources/config/DefaultConfig.cfg
+++ b/app/src/main/resources/config/DefaultConfig.cfg
@@ -36,6 +36,8 @@ warningColor=#FFB300
 vertexMainColor=#f15bb5
 hoveredBorderColor=#6200EE
 edgeMainColor=#000000
+shortestPathColor=#4CAF50
+otherPathsColor=#FF9800
 canvasBackgroundColor=#FFFFFF
 # It will be applied if parameter isTransparentCommandLine=false
 commandLineBackgroundColor=#FFFFFF
