fix(config): fixed DefaultConfig.cfg

--- a/app/src/main/resources/config/DefaultConfig.cfg
+++ b/app/src/main/resources/config/DefaultConfig.cfg
@@ -33,7 +33,7 @@ onError=#FFFFFF
 borderColor=#C0C0C0
 successColor=#4CAF50
 warningColor=#FFB300
-vertexMainColor=#f15bb5
+vertexMainColor=#F15BB5
 hoveredBorderColor=#6200EE
 edgeMainColor=#000000
 shortestPathColor=#4CAF50
@@ -102,7 +102,7 @@ edgeArrowSize=10.0
 edgeWidth=2.0
 
 # Min=0.1 Max=10 (float)
-canvasDragRatio=1
+canvasDragRatio=1.0
 
 # Min=2000 (px)
 canvasLimit=8000
