--- a/app/src/main/resources/config/DefaultConfig.cfg
+++ b/app/src/main/resources/config/DefaultConfig.cfg
@@ -41,8 +41,8 @@ edgeMainColor=#000000
 shortestPathColor=#4CAF50
 otherPathsColor=#FF9800
 canvasBackgroundColor=#FFFFFF
-# It will be applied if parameter isTransparentCommandLine=false
-commandLineBlockBackgroundColor=#FFFFFF
+# It will be applied if parameter isTransparentConsole=false
+consoleBackgroundColor=#FFFFFF
 
 ! Main Screen
 
@@ -66,7 +66,10 @@ titleBarIconSize=20
 ! Command Field
 
 # Min=150 (dp)
-messageOutputHeight=200
+consoleHeight=200
+
+# Min=400 Max=900(dp)
+consoleWidth=700
 
 # Min=1 Max=10000
 maxCountMessages=100
@@ -74,11 +77,8 @@ maxCountMessages=100
 # Min=1 Max=1000
 maxCountUserCommands=200
 
-# Min=400 Max=900(dp)
-commandFieldWidth=700
-
 # true or false
-isTransparentCommandLineBlock=false
+isTransparentConsole=false
 
 ! Work Area
 
@@ -115,4 +115,4 @@ canvasLimit=10000
 animationDuration=300
 
 # Min=10 Max=300 (ms)
-commandFieldScrollDelay=50
+consoleScrollDelay=50
